--- a/index.css
+++ b/index.css
@@ -47,6 +47,8 @@ h1{
 span{
   position: absolute;
   right: 10px;
+  top: 10px;
+  font-size: 1.5rem;
   cursor: pointer;
 }
 
@@ -59,9 +61,11 @@ margin: 0;
 }
 
 footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: green;
   width: 100%;
-  text-align: center;
   height: 20%;
   color: white;
   font-size: 1.5rem;
